--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Django==1.7.1
-astroid==1.3.2
+Django==1.8
+django-badges==0.1.11
 django-bootstrap3==5.0.3
-logilab-common==0.63.2
-pylint==1.4.0
-six==1.8.0
+django-markdown-deux==1.0.5
+google-api-python-client==1.4.0
+python-social-auth==0.2.2
 trueskill==0.4.3
