--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,21 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
+# See https://help.github.com/ignore-files/ for more about ignoring files.
 
-# C extensions
-*.so
+# dependencies
+/node_modules
 
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+# testing
+/coverage
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# production
+/build
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.cache
-nosetests.xml
-coverage.xml
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Project specific
-db.sqlite3
-
-secrets.py
-*/migrations/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
