--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/register": "^7.12.10",
+    "@types/jest": "^30.0.0",
     "@types/koa-static": "^4.0.4",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
