migrate to vite

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,10 @@
     "node": true
   },
   "extends": [
-    "react-app",
-    "react-app/jest",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
@@ -25,13 +27,21 @@
   "rules": {
     "no-console": "off",
     "no-unused-vars": "off",
+    "no-undef": "off",
+    "prefer-const": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
     "@typescript-eslint/no-unsafe-member-access": "off",
     "@typescript-eslint/no-unsafe-call": "off",
     "@typescript-eslint/no-unsafe-return": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-non-null-asserted-optional-chain": "off",
     "eqeqeq": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
+    "react/no-deprecated": "off",
+    "react/jsx-key": "off",
     "prettier/prettier": "error"
   },
   "settings": {
