--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "rootDir": "./src"
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "vite-env.d.ts"
   ],
   "exclude": [
     "node_modules",
