--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "proxy": "http://localhost:8000",
   "name": "game",
   "version": "0.1.0",
   "private": true,
@@ -7,7 +6,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "bgio-postgres": "^1.0.15",
+    "bgio-postgres": "^1.0.0",
     "boardgame.io": "^0.50.2",
     "deepcopy": "^2.1.0",
     "esm": "^3.2.25",
@@ -17,17 +16,16 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
-    "react-scripts": "^5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "react-tooltip": "^5.29.1",
     "universal-cookie": "^8.0.1",
     "uuid": "^11.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "vite build",
+    "test": "vitest",
+    "preview": "vite preview",
     "build-server": "npx tsc src/server.ts --outDir build --target es2020 --module commonjs --esModuleInterop --skipLibCheck",
     "serve": "npm run build-server && node build/server.js",
     "lint": "eslint src/ --ext .ts,.tsx,.js,.jsx --report-unused-disable-directives --max-warnings 0",
@@ -51,21 +49,35 @@
       "last 1 safari version"
     ]
   },
+  "overrides": {
+    "@koa/cors": "^5.0.0",
+    "cookie": "^0.7.2",
+    "engine.io": "^6.6.2",
+    "socket.io": "^4.8.1",
+    "socket.io-parser": "^4.2.4",
+    "svelte": "^4.2.19",
+    "ws": "^8.18.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/register": "^7.12.10",
-    "@types/jest": "^30.0.0",
     "@types/koa-static": "^4.0.4",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "vite-plugin-environment": "^1.1.3",
+    "@types/jest": "^30.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite": "^6.1.1",
+    "vitest": "^3.2.4"
   }
 }
