--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-scroll-to-bottom": "^4.2.0",
     "react-tooltip": "^5.29.1",
@@ -59,12 +60,11 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/koa-static": "^4.0.4",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "vite-plugin-environment": "^1.1.3",
-    "@types/jest": "^30.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.3.4",
@@ -78,6 +78,7 @@
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite": "^6.1.1",
+    "vite-plugin-environment": "^1.1.3",
     "vitest": "^3.2.4"
   }
 }
