fixes for mobile

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "esm": "^3.2.25",
     "koa": "^3.0.0",
     "koa-static": "^5.0.0",
+    "rdndmb-html5-to-touch": "^9.0.0",
     "react": "^19.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-multi-backend": "^9.0.0",
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-scroll-to-bottom": "^4.2.0",
