--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "boardgame.io": "^0.50.2",
     "deepcopy": "^2.1.0",
     "esm": "^3.2.25",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "koa": "^3.0.0",
     "koa-static": "^5.0.0",
     "rdndmb-html5-to-touch": "^9.0.0",
@@ -19,6 +21,7 @@
     "react-dnd-multi-backend": "^9.0.0",
     "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
     "react-scroll-to-bottom": "^4.2.0",
     "react-tooltip": "^5.29.1",
     "universal-cookie": "^8.0.1",
