--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "typescript": "^5.8.3",
     "vite": "^6.1.1",
     "vite-plugin-environment": "^1.1.3",
-    "vitest": "^3.2.4"
+    "vite-plugin-pwa": "^1.0.2",
+    "vitest": "^3.2.4",
+    "workbox-window": "^7.3.0"
   }
 }
