remove debug logs & fix format

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,12 +20,6 @@
     "outDir": "./build",
     "rootDir": "./src"
   },
-  "include": [
-    "src/**/*",
-    "vite-env.d.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "build"
-  ]
+  "include": ["src/**/*", "vite-env.d.ts"],
+  "exclude": ["node_modules", "build"]
 }
