--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,11 +19,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "@typescript-eslint",
-    "prettier"
-  ],
+  "plugins": ["react", "@typescript-eslint", "prettier"],
   "rules": {
     "no-console": "off",
     "no-unused-vars": "off",
