--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,32 +2,27 @@
   // ESLint configuration
   "eslint.enable": true,
   "eslint.workingDirectories": ["."],
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-    "typescriptreact"
-  ],
-  
+  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
+
   // Auto-fix ESLint issues on save
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  
+
   // Format configuration
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  
+
   // Show linting errors in problems panel
   "eslint.alwaysShowStatus": true,
   "eslint.debug": false,
-  
+
   // TypeScript settings
   "typescript.suggest.autoImports": true,
   "typescript.validate.enable": true,
   "javascript.validate.enable": true,
   "typescript.preferences.includePackageJsonAutoImports": "on",
-  
+
   // File associations
   "files.associations": {
     "*.js": "javascript",
@@ -35,16 +30,16 @@
     "*.ts": "typescript",
     "*.tsx": "typescriptreact"
   },
-  
+
   // Emmet for JSX
   "emmet.includeLanguages": {
     "javascript": "javascriptreact",
     "typescript": "typescriptreact"
   },
-  
+
   // Auto-save
   "files.autoSave": "onFocusChange",
-  
+
   // Exclude node_modules from file watcher
   "files.watcherExclude": {
     "**/node_modules/**": true,
