--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "preview": "vite preview",
     "build-server": "npx tsc src/server.ts --outDir build --target es2020 --module commonjs --esModuleInterop --skipLibCheck",
     "serve": "npm run build-server && node build/server.js",
-    "lint": "eslint src/ --ext .ts,.tsx,.js,.jsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint src/ --ext .ts,.tsx,.js,.jsx --fix",
-    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx --report-unused-disable-directives --max-warnings 0 --ignore-path .gitignore .",
+    "lint:fix": "eslint --ext .ts,.tsx,.js,.jsx --fix --ignore-path .gitignore .",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "pre-commit": "npm run lint && npm run format:check && npm run build",
     "prepare": "husky",
